Fix horizonal overflow in chrome

--- a/src/home.sass
+++ b/src/home.sass
@@ -1,7 +1,12 @@
 
+body
+  overflow-x: hidden
+  width: 100vw
+
 .container-center-horizontal
   overflow-x: hidden
-  width: 100%
+  width: 100vw
+  box-sizing: border-box
 
 .HowEmpireCanBeUsedWrapper
   position: absolute
